[Bug] Fix rawMaterialReport

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -5,11 +5,15 @@ Formulation = Formulierung
 
 MPLabel = MP-Etikett
 
+ONUCode = Code ONU
+
 PercentLoss = % Verlust
 
 PercentYeld = % Ertrag
 
 RMOrigin = Herkunft der Rohstoffe
+
+ScoreAndNutritionalScore = Score und N\u00E4hrwertskala
 
 StockroomGuaranty = Mindestlebensdauer bei Erhalt (d)
 
@@ -23,9 +27,35 @@ absence = Abwesenheit
 
 acceptance = AKZEPTANZ DIESER SPEZIFIKATION UND GARANTIE
 
+acv = LZA
+
 address = Adresse
 
 alcohol = Alkoholischer Titel
+
+alcoholBeverage = Alkoholisches Getr\u00E4nk
+
+alcoholBeverageAge = Alter des alkoholischen Getr\u00E4nks (M)
+
+alcoholBeverageContainer = Beh\u00E4lter f\u00FCr alkoholische Getr\u00E4nke
+
+alcoholBeverageDistilledFrom = Alkoholisches Getr\u00E4nk, destilliert aus
+
+alcoholBeverageFilteringMethodType = Methode zur Filtration des alkoholischen Getr\u00E4nks
+
+alcoholBeverageProductionMethodType = Produktionsmethode
+
+alcoholBeverageSugarContent = Zuckergehalt des alkoholischen Getr\u00E4nks (g/L)
+
+alcoholBeverageType = Art des alkoholischen Getr\u00E4nks
+
+alcoholProof = Nachweis von Alkohol
+
+alcoholSubRegion = Region der Bezeichnung
+
+alcoholUnits = Alkoholeinheiten
+
+alcoholicPermissionLevel = Lizenz zum Ausschank von Getr\u00E4nken erforderlich
 
 allergen = Allergenen
 
@@ -57,17 +87,25 @@ averageNutritionalCharac = Durchschnittliche N\u00E4hrwerte f\u00FCr 100 g
 
 beCPGCode = beCPG Code :
 
+beerStyle = Art des Bieres
+
 bestBeforeDate = MHD
 
 bioOrigin = Bio. Herkunft
 
+bitternessOfBeerMeasurement = Messung der Bitterkeit von Bier (IBU)
+
 canContain = Kann enthalten :
+
+caskStrength = Unverd\u00FCnnt?
 
 certificatAgence = Agentur f\u00FCr Zertifizierung
 
 certificatStandart = Standard der Zertifizierung
 
 certificatesDate = Datum der Zertifikate
+
+certification = Zertifizierung
 
 certificationChapter = ZERTIFIKATE
 
@@ -131,7 +169,17 @@ chapterThickness = Dicke
 
 charact = Spezifikationen
 
+cheeseInformations = Informationen \u00FCber K\u00E4se
+
+cheeseMaturationPeriodDescription = Beschreibung der Reifezeit des K\u00E4ses
+
+cheeseMaturationProcessContainerTypeCode = Art des Beh\u00E4lters f\u00FCr die K\u00E4sereifung
+
+chemicalCode = Chemische Codes
+
 city = Stadt
+
+classCode = Klassencode
 
 clients = Kunde
 
@@ -206,6 +254,8 @@ decisionTreeEmpty = Leeren
 
 decisionTreeQuestions = Entscheidungsbaumfragen:\nF1: Auf der Produktionsst\u00E4tte pr\u00E4sent ?\nF2: Anwesend beim Lieferanten oder w\u00E4hrend des Transports ?\nF3: Kann es Kontakt geben ?\nF4: Die Ber\u00FChrungsrisiken werden beherrscht ?
 
+degreeOfOriginalWort = Grad der Stammw\u00FCrze
+
 density = Dichte
 
 descrPack = Beschreibung der Verpackung
@@ -228,6 +278,10 @@ eanCode3 = GTIN/EAN Palette
 
 eanSupplier = GTIN/EAN
 
+ecNumber = EC-Nummer
+
+einecsNumber = EINECS-Nummer
+
 email = E-Mail 
 
 erpCode = Artikel Nr.
@@ -236,13 +290,21 @@ erpCodeHeader = ERP code :
 
 false = Nein
 
+fatPourcentageInDryMatter = Fett an der Trockenmasse (%)
+
 fax = Fax 
+
+fdaCat = Kategorie FDA
+
+femaNumber = FEMA-Nummer
 
 ficheTechnique = PRODUKTSPEZIFIKATION
 
 filmedPallet = Gefilmte Palette
 
 firstName = Vorname
+
+flNumber = FL-Nummer
 
 functionality = Funktionalit\u00E4t
 
@@ -302,6 +364,8 @@ hQtyPerUnit = Menge / Einheit
 
 hRMCode = RM-code
 
+hazardStatements = Gefahrenhinweise
+
 height = Au\u00DFenh\u00F6he (mm):
 
 ingPercInFormule = % Zutaten in der Formel
@@ -348,19 +412,27 @@ length = Au\u00DFenl\u00E4nge (mm):
 
 level = Niveau
 
+lifeAssessment = LEBENSZYKLUSANALYSE
+
 locationState = Staat / Region / Kanton
 
 locationZip = Code postalisch
 
 mandatoryParticularsForLabelling = Vorgeschriebene Angaben zur Kennzeichnung
 
+manual = Handbuch
+
 material = Material :
+
+material2 = Material 
 
 materialCost = Material kosten (\u20AC/kg)
 
+materials = MATERIALIEN
+
 maxi = Maxi
 
-method = VERFAHREN
+method = Verfahren
 
 mgrPackaging = Verpackung Mgr
 
@@ -423,15 +495,23 @@ numberOfServing = Anzahl der Portionen
 nutType.minerals = Mineralien
 nutType.vitamins = Vitamine
 
+nutrientProfileCategory = Ern\u00E4hrungsprofil
+
+nutrientProfileVersion = Version des N\u00E4hrwertprofils
+
 nutritionDeclaration = N\u00E4hrwerte
 
 of = von
+
+originOfWine = Herkunft des Weins
 
 packSheet = VERPACKUNGSBLATT
 
 packaging = Verpackungseinheit
 
 packagingDescription = Verpackungsbeschreibung
+
+packagingGroupCode = Code Verpackungsgruppe
 
 packagingStaples = Verpackungsklammern
 
@@ -453,13 +533,25 @@ perServing = Pro Portion
 
 percent = %
 
+percentApplicable = % anwendbar
+
+percentClaim = % beansprucht
+
+percentageOfAlcoholByVolume = Alkoholgehalt pro Volumen (%)
+
+percentageOfAlcoholByVolumeMeasurement = Genauigkeit der Messung des Alkoholgehalts in Volumenprozent
+
 periodAfterOpening = Zeit nach \u00D6ffnung (T)
+
+personalProtections = Pers\u00F6nliche Schutzausr\u00FCstung
 
 phone = Telefon
 
 photo = Foto
 
 physicState = Physischer Zustand
+
+pictograms = Piktogramme
 
 picture = Bild
 
@@ -517,6 +609,8 @@ ppClosureType = Prim\u00E4rverpackung - Verschlussart
 
 precautionOfUse = Vorsichtsma\u00DFnahmen f\u00FCr die Anwendung
 
+precautionaryStatements = Tipps zur Vorsicht
+
 preparationTips = Vorbereitungstipps
 
 presentOnLine = Online anwesend
@@ -526,6 +620,8 @@ presentOnSite = Vor Ort anwesend
 price = Preis
 
 priceBreak.supplier = Lieferant
+
+primaryAddedFlavouring = Hinzugef\u00FCgter Hauptgeschmack
 
 primaryPack = Prim\u00E4rverpackung
 
@@ -540,6 +636,8 @@ product = Produkt
 product2Dot = Produkt:
 
 productDescription = Produktbeschreibung
+
+productGeoOrigin = Geografische Herkunft
 
 productHeader = Produkt :
 
@@ -585,7 +683,11 @@ rawMaterialName = Name des Rohmaterials
 
 recipe = REZEPT
 
+recycledPercentage = Eingearbeitetes recyceltes Material (%)
+
 reglementAllergenes = Gem\u00E4\u00DF Anhang II der Verordnung (EU) Nr. 1169/2011
+
+rennetTypeCode = Art von Lab
 
 repository = Repository :
 
@@ -594,6 +696,12 @@ resource = Ressource
 resourceParam = MASCHINENPARAMETER
 
 results = Ergebnisse
+
+rindEdible = Ist die Kruste essbar?
+
+ripeningTimePeriod = Reifungsperiode
+
+safetyInstructions = Sicherheitshinweise
 
 salelegaldeclaration = Rechtliche Erkl\u00E4rung zum Verkauf
 
@@ -607,7 +715,11 @@ sampleHeader = Probe :
 
 sampleSignature = Unterschrift :
 
+secondaryAddedFlavouring = Sekund\u00E4rer hinzugef\u00FCgter Geschmack
+
 secondaryPack = Paket
+
+security = Sicherheit
 
 servingSize = Portionsgr\u00F6\u00DFe (g)
 
@@ -615,7 +727,9 @@ showNutritionalScore = Nutri-Score anzeigen
 
 showOptionalNutrients = Optionale n\u00E4hrstoffe anzeigen
 
-signature = Hergestellt am: \nDatum: \nUnterschrift  von verantwortlich: \nStempel der Firma:
+signalWord = Warnhinweis
+
+signature = Hergestellt am :\nDatum :\nUnterschrift von verantwortlich :\nStempel der Firma :
 
 signatureFooter = Unterschrift
 
@@ -643,17 +757,27 @@ supplierName = Name des Lieferanten
 
 supplierPlant = Lieferant Werk
 
+supplierRefCode = Referenz Produkt Anbieter
+
 supplierReport = Anbieterbericht
 
 supplyDelay = Lieferverz\u00F6gerung (d)
 
 support = Support
 
+surfaceOfCheeseAtEndOfRipeningCode = Oberfl\u00E4che des K\u00E4ses am Ende der Reifung
+
+sweetnessLevelOfAlcoholicBeverage = S\u00FC\u00DFe Stufe des alkoholischen Getr\u00E4nks
+
 tare = Tara:
+
+tare2 = Tara
 
 tarePkgLevel1 = Tara in g
 
 tareUnit = Tarierger\u00E4t:
+
+tareUnit2 = Tarierger\u00E4t:
 
 target = Ziel
 
@@ -751,11 +875,19 @@ valueForOneShare = Werte f\u00FCr 1 Portion
 
 valuePerc = Wert (%)
 
+valuePrepared = Vorbereiteter Wert
+
 valueSingle = Wert
 
 variante = Variante
 
 version = Version :
+
+vintage = Jahrgang
+
+vintageDrink = Jahrgangsgetr\u00E4nk
+
+vintner = Winzer
 
 waranty = Ich garantiere, dass dieses Rohmaterial :\n\n- Enth\u00E4lt keine GVO (im Sinne der Richtlinie 2001/18 / EG in der ge\u00E4nderten Fassung)\n- wird nicht ionisiert\n- Entspricht der ge\u00E4nderten Verordnung (EG) Nr. 1881/2006 vom 19. Dezember 2006 zur Festlegung von H\u00F6chstgehalten f\u00FCr bestimmte Kontaminanten in Lebensmitteln (Mykotoxine, Metalle, Dioxine, PCB, PAK, Melamin usw.)\n- Entspricht der ge\u00E4nderten Verordnung (EG) Nr. 396/2005 vom 23. Februar 2005 \u00FCber H\u00F6chstgrenzen f\u00FCr Pestizidr\u00FCckst\u00E4nde.\n\nMit diesem Dokument best\u00E4tige ich die Richtigkeit dieser Informationen.
 
