--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -5,11 +5,15 @@ Formulation = Formulaci\u00F3n
 
 MPLabel = MP tarra
 
+ONUCode = Koodi ONU
+
 PercentLoss = Tappio%
 
 PercentYeld = % Tuotto
 
 RMOrigin = Raaka-aineiden alkuper\u00E4
+
+ScoreAndNutritionalScore = Ravitsemuksen pisteet ja asteikko
 
 StockroomGuaranty = Minimi k\u00E4ytt\u00F6ik\u00E4 vastaanottohetkell\u00E4 (p\u00E4ivin\u00E4)
 
@@ -23,9 +27,35 @@ absence = Poissaolo
 
 acceptance = T\u00C4M\u00C4N ERITELM\u00C4N JA TAKUUN HYV\u00C4KSYMINEN
 
+acv = EKA
+
 address = Osoite
 
 alcohol = alkoholi
+
+alcoholBeverage = Alkoholijuomat
+
+alcoholBeverageAge = Alkoholijuoman ik\u00E4 (K)
+
+alcoholBeverageContainer = Alkoholijuomapakkaukset
+
+alcoholBeverageDistilledFrom = Alkoholijuoma, joka on tislattu
+
+alcoholBeverageFilteringMethodType = Menetelm\u00E4 alkoholijuomien suodattamiseksi
+
+alcoholBeverageProductionMethodType = Tuotantomenetelm\u00E4
+
+alcoholBeverageSugarContent = Alkoholijuoman sokeripitoisuus (g/L)
+
+alcoholBeverageType = Alkoholijuomatyyppi
+
+alcoholProof = Alkoholitodisteet
+
+alcoholSubRegion = Nimitysalue
+
+alcoholUnits = Alkoholiyksik\u00F6t
+
+alcoholicPermissionLevel = Tarvittava anniskelulupa
 
 allergen = Allergeeni
 
@@ -57,17 +87,25 @@ averageNutritionalCharac = Keskim\u00E4\u00E4r\u00E4iset ravintoarvot 100 gramma
 
 beCPGCode = beCPG-koodi :
 
+beerStyle = Oluttyyppi
+
 bestBeforeDate = Paras ennen p\u00E4iv\u00E4yst\u00E4
 
 bioOrigin = Biologinen alkuper\u00E4
 
+bitternessOfBeerMeasurement = Oluen katkeruuden mittaaminen (IBU)
+
 canContain = Voi sis\u00E4lt\u00E4\u00E4 :
+
+caskStrength = Laimentamattomana?
 
 certificatAgence = Sertifiointilaitos
 
 certificatStandart = Sertifiointistandardi
 
 certificatesDate = Varmennep\u00E4iv\u00E4m\u00E4\u00E4r\u00E4
+
+certification = Sertifiointi
 
 certificationChapter = SERTIFIOINNIT
 
@@ -131,7 +169,17 @@ chapterThickness = Paksuus
 
 charact = Ominaisuudet
 
+cheeseInformations = Tietoa juustosta
+
+cheeseMaturationPeriodDescription = Juuston kypsytysajan kuvaus
+
+cheeseMaturationProcessContainerTypeCode = Juuston kypsytysastian tyyppi
+
+chemicalCode = Kemialliset koodit
+
 city = Kaupunki
+
+classCode = Luokan koodi
 
 clients = Asiakkaat
 
@@ -206,6 +254,8 @@ decisionTreeEmpty = Tyhj\u00E4
 
 decisionTreeQuestions = Kysymykset p\u00E4\u00E4t\u00F6ksest\u00E4: \r\nQ1: l\u00E4sn\u00E4 tuotantopaikalla?\r\nQ2: l\u00E4sn\u00E4 toimittajalla tai kuljetuksen aikana?\r\nQ3: Onko yhteys mahdollista?\r\nQ4: Yhteysriskit ovat hallinnassa?
 
+degreeOfOriginalWort = Alkuper\u00E4isen on oltava
+
 density = Tiheys
 
 descrPack = Pakkauksen kuvaus
@@ -228,6 +278,10 @@ eanCode3 = GTIN/EAN-lava
 
 eanSupplier = GTIN/EAN
 
+ecNumber = EC-numero
+
+einecsNumber = EINECS-numero
+
 email = E-Mail 
 
 erpCode = ERP-koodi
@@ -236,13 +290,21 @@ erpCodeHeader = ERP koodi :
 
 false = Ei
 
+fatPourcentageInDryMatter = Rasvan osuus kuiva-aineesta (%)
+
 fax = Faksi
+
+fdaCat = FDA-luokka
+
+femaNumber = FEMA-numero
 
 ficheTechnique = TEKNINEN LEHTY
 
 filmedPallet = Kuvattu kuormalava
 
 firstName = Etunimi
+
+flNumber = FL-numero
 
 functionality = Toiminnallisuus
 
@@ -302,6 +364,8 @@ hQtyPerUnit = M\u00E4\u00E4r\u00E4 / yksikk\u00F6
 
 hRMCode = RM-koodi
 
+hazardStatements = Vaaramerkinn\u00E4t
+
 height = Ulkoinen korkeus (mm):
 
 ingPercInFormule = % kaavan sis\u00E4lt\u00E4mist\u00E4 ainesosista
@@ -312,7 +376,7 @@ ingTypeV2 = Tyyppi
 
 ingredient = Ainesosa
 
-ingredientsList = Ainesosaluettelo
+ingredientsList = AINESOSALUETTELO
 
 ingredientsListTitle = Ainesosaluettelo
 
@@ -348,15 +412,23 @@ length = Ulkoinen pituus (mm):
 
 level = Taso
 
+lifeAssessment = ELINKAARIARVIOINTI
+
 locationState = Valtio / Alue / Canton
 
 locationZip = Postinumero
 
 mandatoryParticularsForLabelling = Pakolliset merkinn\u00E4t
 
+manual = Manuel
+
 material = Materiaali :
 
+material2 = Materiaali 
+
 materialCost = Kustannus / komponentti
+
+materials = MATERIAALIT
 
 maxi = Enimm\u00E4isarvo
 
@@ -423,15 +495,23 @@ numberOfServing = Annosten lukum\u00E4\u00E4r\u00E4
 nutType.minerals = Mineraalit
 nutType.vitamins = Vitamiinit
 
+nutrientProfileCategory = Ravitsemuksellinen profiili
+
+nutrientProfileVersion = Ravitsemusprofiilin versio
+
 nutritionDeclaration = Ravintosis\u00E4lt\u00F6
 
 of = de
+
+originOfWine = Viinin alkuper\u00E4
 
 packSheet = PAKKAUSSELOSTE
 
 packaging = Pakkaus
 
 packagingDescription = Pakkauksen kuvaus
+
+packagingGroupCode = Pakkausryhm\u00E4n koodi
 
 packagingStaples = Nidontapakkaukset
 
@@ -453,13 +533,25 @@ perServing = Annosta kohti
 
 percent = %
 
+percentApplicable = % sovellettavissa
+
+percentClaim = % v\u00E4itetty
+
+percentageOfAlcoholByVolume = Alkoholin tilavuusprosentti (%)
+
+percentageOfAlcoholByVolumeMeasurement = Alkoholin tilavuusprosentin mittaustarkkuus
+
 periodAfterOpening = Ajanjakso avaamisen j\u00E4lkeen (p)
+
+personalProtections = Henkil\u00F6kohtaiset suojavarusteet
 
 phone = Puhelin
 
 photo = Kuva
 
 physicState = Fyysinen tila
+
+pictograms = Piktogrammit
 
 picture = Kuva
 
@@ -517,6 +609,8 @@ ppClosureType = Peruspakkaukset - Sulkemistyyppi
 
 precautionOfUse = K\u00E4yt\u00E4 ehtoja
 
+precautionaryStatements = Turvallisuusohjeet
+
 preparationTips = Valmisteluvihjeit\u00E4
 
 presentOnLine = L\u00E4sn\u00E4 verkossa
@@ -526,6 +620,8 @@ presentOnSite = Paikalla
 price = Hinta
 
 priceBreak.supplier = Toimittaja
+
+primaryAddedFlavouring = T\u00E4rkein lis\u00E4tty maku
 
 primaryPack = Ensisijainen pakkaus
 
@@ -540,6 +636,8 @@ product = Tuote
 product2Dot = Tuote:
 
 productDescription = Tuotteen kuvaus
+
+productGeoOrigin = Maantieteellinen alkuper\u00E4
 
 productHeader = Tuote :
 
@@ -585,7 +683,11 @@ rawMaterialName = Raaka-aineen nimi
 
 recipe = RESEPTI
 
+recycledPercentage = Kierr\u00E4tetty sis\u00E4lt\u00F6 (%)
+
 reglementAllergenes = Asetuksen (UE) n\u00B01196 / 2011 liitteen II mukaan
+
+rennetTypeCode = Juoksutustyyppi
 
 repository = Arkisto :
 
@@ -594,6 +696,12 @@ resource = Resurssi
 resourceParam = KONEEN PARAMETRIT
 
 results = Tulokset
+
+rindEdible = Onko kuori sy\u00F6t\u00E4v\u00E4?
+
+ripeningTimePeriod = Kypsymisaika
+
+safetyInstructions = Turvallisuusohjeet
 
 salelegaldeclaration = Myynnin laillinen ilmoitus
 
@@ -607,7 +715,11 @@ sampleHeader = N\u00E4yte :
 
 sampleSignature = Allekirjoitus :
 
+secondaryAddedFlavouring = Toissijainen lis\u00E4tty aromi
+
 secondaryPack = Toissijainen pakkaus
+
+security = Turvallisuus
 
 servingSize = Tarjoilukoko (g)
 
@@ -615,7 +727,9 @@ showNutritionalScore = N\u00E4ytt\u00E4\u00E4 nutri-pistem\u00E4\u00E4r\u00E4n
 
 showOptionalNutrients = N\u00E4yt\u00E4 valinnaiset ravintoaineet
 
-signature = Valmistusp\u00E4iv\u00E4:\r\nP\u00E4iv\u00E4m\u00E4\u00E4r\u00E4:\r\nVirkamiehen allekirjoitus:\r\nYritysleima:
+signalWord = Varoituslausuma
+
+signature = Valmistusp\u00E4iv\u00E4 :\nP\u00E4iv\u00E4m\u00E4\u00E4r\u00E4 :\nVirkamiehen allekirjoitus :\nYritysleima :
 
 signatureFooter = Allekirjoitus
 
@@ -643,17 +757,27 @@ supplierName = Toimittajan nimi
 
 supplierPlant = Toimittajalaitos
 
+supplierRefCode = Toimittajan tuoteviite
+
 supplierReport = Toimittajan raportti
 
 supplyDelay = Toimitusviive (p)
 
 support = Tuki
 
+surfaceOfCheeseAtEndOfRipeningCode = Juuston pinta kypsytyksen loppuvaiheessa
+
+sweetnessLevelOfAlcoholicBeverage = alkoholijuoman makeustaso
+
 tare = Taara:
+
+tare2 = Taara
 
 tarePkgLevel1 = Tara grammoina
 
 tareUnit = Tarayksikk\u00F6 : 
+
+tareUnit2 = Tarayksikk\u00F6
 
 target = Kohde
 
@@ -751,11 +875,19 @@ valueForOneShare = Arvot yhdelle tarjoukselle
 
 valuePerc = Arvo (%)
 
+valuePrepared = Valmisteltu arvo
+
 valueSingle = Arvo
 
 variante = Variantti
 
 version = Versio :
+
+vintage = vuosikerta
+
+vintageDrink = Vintage-juoma
+
+vintner = Viininviljelij\u00E4
 
 waranty = Takaan, ett\u00E4 t\u00E4m\u00E4 raaka-aine :\r\n\r\n- ei sis\u00E4ll\u00E4 GMO: ta (sellaisena kuin se on m\u00E4\u00E4ritelty muutetussa direktiiviss\u00E4 n\u00B02001/18/CE\r\n- ei ole ionisoitunut\r\n- noudattaa muutettuja s\u00E4\u00E4nt\u00F6j\u00E4 (CE)n\u00B01881/2006 19. joulukuuta 2006 alkaen\r\n- Vastaa muutoss\u00E4\u00E4nt\u00F6j\u00E4 (CE) n\u00B0 396/2005. helmikuuta 2005 alkaen\r\n\r\nT\u00E4m\u00E4n asiakirjan kanssa vakuutan, ett\u00E4 kaikki n\u00E4m\u00E4 tiedot ovat oikeita.
 
