--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -5,11 +5,15 @@ Formulation = Formulation
 
 MPLabel = Intitul\u00E9 MP
 
+ONUCode = Code ONU
+
 PercentLoss = % Freinte
 
 PercentYeld = % Rdt
 
 RMOrigin = Origines des mati\u00E8res premi\u00E8res
+
+ScoreAndNutritionalScore = Score et \u00E9chelle nutritionnelle
 
 StockroomGuaranty = Garantie entrep\u00F4t (J)
 
@@ -23,9 +27,35 @@ absence = Absence
 
 acceptance = VALIDATION DE CETTE SP\u00C9CIFICATION
 
+acv = ACV
+
 address = Adresse
 
 alcohol = Titre alcoom\u00E9trique
+
+alcoholBeverage = Boisson alcoolis\u00E9e
+
+alcoholBeverageAge = \u00C2ge de la boisson alcoolis\u00E9e (M)
+
+alcoholBeverageContainer = Conteneurs de boisson alcoolis\u00E9e
+
+alcoholBeverageDistilledFrom = Boisson alcoolis\u00E9e distill\u00E9e \u00E0 partir de 
+
+alcoholBeverageFilteringMethodType = M\u00E9thode de filtration de la boisson alcoolis\u00E9e
+
+alcoholBeverageProductionMethodType = M\u00E9thode de production
+
+alcoholBeverageSugarContent = Teneur en sucre de la boisson alcoolis\u00E9e (g/L)
+
+alcoholBeverageType = Type de boisson alcoolis\u00E9e
+
+alcoholProof = Preuve d'alcool
+
+alcoholSubRegion = R\u00E9gion d'appellation
+
+alcoholUnits = Unit\u00E9s d'alcool
+
+alcoholicPermissionLevel = Licence de d\u00E9bit de boissons n\u00E9cessaire
 
 allergen = Allerg\u00E8nes
 
@@ -57,17 +87,25 @@ averageNutritionalCharac = Valeurs \u00E9nerg\u00E9tiques et nutritionnelles moy
 
 beCPGCode = Code beCPG :
 
+beerStyle = Type de bi\u00E8re
+
 bestBeforeDate = DDM/DLUO
 
 bioOrigin = Origine bio.
 
+bitternessOfBeerMeasurement = Mesure de l'amertume de la bi\u00E8re (IBU)
+
 canContain = Peut contenir :
+
+caskStrength = Non dilu\u00E9e ?
 
 certificatAgence = Agence de certification
 
 certificatStandart = Standard de certification
 
 certificatesDate = Date des certificats
+
+certification = Certification
 
 certificationChapter = CERTIFICATIONS
 
@@ -131,7 +169,17 @@ chapterThickness = \u00C9paisseur
 
 charact = Caract\u00E9ristiques
 
+cheeseInformations = Informations sur le fromage
+
+cheeseMaturationPeriodDescription = Description de la p\u00E9riode de maturation du fromage
+
+cheeseMaturationProcessContainerTypeCode = Type de conteneur pour la maturation du fromage
+
+chemicalCode = Codes chimiques
+
 city = Ville
+
+classCode = Code classe
 
 clients = Client
 
@@ -206,6 +254,8 @@ decisionTreeEmpty = Non renseignu00E9
 
 decisionTreeQuestions = Questions arbre de d\u00E9cision\u00A0:\nQ1\u00A0: Pr\u00E9sent sur le site de production\u00A0?\nQ2\u00A0: Pr\u00E9sent chez le fournisseur ou lors du transport\u00A0?\nQ3\u00A0: Peut-il y avoir contact\u00A0?\nQ4\u00A0: Les risques de contact sont ils maitris\u00E9s\u00A0?
 
+degreeOfOriginalWort = Degr\u00E9 de mo\u00FBt d'origine
+
 density = Densit\u00E9 (ou masse volumique en (kg/L))
 
 descrPack = Description du conditionnement
@@ -228,6 +278,10 @@ eanCode3 = GTIN/EAN palette
 
 eanSupplier = GTIN/EAN
 
+ecNumber = num\u00E9ro EC
+
+einecsNumber = num\u00E9ro EINECS
+
 email = Email
 
 erpCode = Code ERP
@@ -236,13 +290,21 @@ erpCodeHeader = Code ERP :
 
 false = Non
 
+fatPourcentageInDryMatter = Gras sur la mati\u00E8re s\u00E8che (%)
+
 fax = Fax
+
+fdaCat = Cat\u00E9gorie FDA
+
+femaNumber = num\u00E9ro FEMA
 
 ficheTechnique = FICHE TECHNIQUE
 
 filmedPallet = Palette film\u00E9e
 
 firstName = Pr\u00E9nom
+
+flNumber = num\u00E9ro FL
 
 functionality = Fonctionnalit\u00E9
 
@@ -302,6 +364,8 @@ hQtyPerUnit = Qt\u00E9/UV
 
 hRMCode = Code MP
 
+hazardStatements = Mentions de danger
+
 height = Hauteur ext\u00E9rieure (mm) :\u00A0
 
 ingPercInFormule = % ing dans la Formule
@@ -348,15 +412,23 @@ length = Longueur/Profondeur ext\u00E9rieure (mm) :\u00A0
 
 level = Niveau
 
+lifeAssessment = ANALYSE DU CYCLE DE VIE
+
 locationState = C9tat / RE9gion / Canton
 
 locationZip = Code postal
 
 mandatoryParticularsForLabelling = Mentions obligatoires pour l\u2019\u00E9tiquetage 
 
+manual = Manuel
+
 material = Mat\u00E9riau : 
 
+material2 = Mat\u00E9riau 
+
 materialCost = Co\u00FBt mati\u00E8re (/kg)
+
+materials = MAT\u00C9RIAUX
 
 maxi = Maxi
 
@@ -423,15 +495,23 @@ numberOfServing = Nombre de portions
 nutType.minerals = Min\u00E9raux
 nutType.vitamins = Vitamines
 
+nutrientProfileCategory = Profil nutritionnel
+
+nutrientProfileVersion = Version du profil nutritionnel
+
 nutritionDeclaration = D\u00E9claration nutritionnelle
 
 of = de 
+
+originOfWine = Origine du vin
 
 packSheet = FICHE CONDITIONNEMENT
 
 packaging = Conditionnement
 
 packagingDescription = Description du conditionnement
+
+packagingGroupCode = Code groupe emballage
 
 packagingStaples = Pr\u00E9sence d'agrafes
 
@@ -453,13 +533,25 @@ perServing = Portions
 
 percent = %
 
+percentApplicable = % applicable
+
+percentClaim = % revendiqu\u00E9
+
+percentageOfAlcoholByVolume = Pourcentage d'alcool par volume (%)
+
+percentageOfAlcoholByVolumeMeasurement = Pr\u00E9cision de la mesure du pourcentage d'alcool par volume
+
 periodAfterOpening = PAO (J)
+
+personalProtections = Equipements de protection individuel
 
 phone = T\u00E9l\u00E9phone
 
 photo = Photo
 
 physicState = \u00C9tat physique
+
+pictograms = Pictogrammes
 
 picture = Photographie
 
@@ -517,6 +609,8 @@ ppClosureType = Emballage primaire - Type de fermeture
 
 precautionOfUse = Pr\u00E9cautions d'emploi
 
+precautionaryStatements = Conseils de prudence
+
 preparationTips = Conseils de pr\u00E9paration
 
 presentOnLine = Pr\u00E9sent en ligne
@@ -526,6 +620,8 @@ presentOnSite = Pr\u00E9sent sur site
 price = Prix
 
 priceBreak.supplier = Fournisseur
+
+primaryAddedFlavouring = Saveur ajout\u00E9e principale
 
 primaryPack = UVC
 
@@ -540,6 +636,8 @@ product = Produit
 product2Dot = Produit:
 
 productDescription = Description du produit
+
+productGeoOrigin = Origines g\u00E9ographiques
 
 productHeader = Produit :
 
@@ -585,7 +683,11 @@ rawMaterialName = Nom de la mati\u00E8re premi\u00E8re
 
 recipe = RECETTE
 
+recycledPercentage = Mati\u00E8re recycl\u00E9e incorpor\u00E9e (%)
+
 reglementAllergenes = Conform\u00E9ment au r\u00E8glement (UE) n\u00B0 1169/2011 Annexe II
+
+rennetTypeCode = Type de pr\u00E9sure
 
 repository = Dossier :
 
@@ -594,6 +696,12 @@ resource = Ressource
 resourceParam = PARAM\u00C8TRES MACHINE
 
 results = Resultats
+
+rindEdible = La croute est-elle comestible?
+
+ripeningTimePeriod = P\u00E9riode de maturation
+
+safetyInstructions = Consignes de s\u00E9curit\u00E9
 
 salelegaldeclaration = D\u00E9claration l\u00E9gale de vente
 
@@ -605,9 +713,13 @@ sampleDate = Date :
 
 sampleHeader = \u00C9chantillon : 
 
-sampleSignature = Visa exp\u00E9diteur : 
+sampleSignature = Signature :
+
+secondaryAddedFlavouring = Saveur ajout\u00E9e secondaire
 
 secondaryPack = Colis
+
+security = S\u00E9curit\u00E9
 
 servingSize = Taille d'une portion (g)
 
@@ -615,7 +727,9 @@ showNutritionalScore = Afficher le nutri-score
 
 showOptionalNutrients = Afficher les nutriments optionnels
 
-signature = Fait \u00E0 :\nDate\u00A0:\nSignature du responsable\u00A0:\nCachet de la soci\u00E9t\u00E9\u00A0:
+signalWord = Mention d'avertissement
+
+signature = Fait \u00E0 :\nDate :\nSignature du responsable :\nCachet de la soci\u00E9t\u00E9 :
 
 signatureFooter = Signature
 
@@ -643,17 +757,27 @@ supplierName = Nom fournisseur
 
 supplierPlant = Usine fournisseur
 
+supplierRefCode = R\u00E9f\u00E9rence produit fournisseur
+
 supplierReport = Rapport fournisseur
 
 supplyDelay = D\u00E9lais d'approvisionnement (J)
 
 support = Support
 
+surfaceOfCheeseAtEndOfRipeningCode = Surface du fromage en fin de maturation
+
+sweetnessLevelOfAlcoholicBeverage = Niveau de douceur de la boisson alcoolis\u00E9e
+
 tare = Tare : 
+
+tare2 = Tare
 
 tarePkgLevel1 = Tare UVC en g
 
 tareUnit = Unit\u00E9 de tare : 
+
+tareUnit2 = Unit\u00E9 de tare
 
 target = Cible
 
@@ -751,11 +875,19 @@ valueForOneShare = Valeurs pour 1 portion
 
 valuePerc = Valeur (%)
 
+valuePrepared = Valeur pr\u00E9par\u00E9e
+
 valueSingle = Valeur
 
 variante = Variante
 
 version = Version :
+
+vintage = mill\u00E9sime
+
+vintageDrink = Boisson mill\u00E9sim\u00E9e
+
+vintner = Vigneron
 
 waranty = Je garantie que cette mati\u00E8re premi\u00E8re\u00A0:  \n\n- Ne contient pas d\u2019OGM (comme d\u00E9fini dans la directive n\u00B02001/18/CE modifi\u00E9e)\n- N\u2019est pas ionis\u00E9e \n- Est conforme au r\u00E8glement (CE) n\u00B01881/2006 du 19 d\u00E9cembre 2006 modifi\u00E9 portant fixation de teneurs maximales pour certains contaminants dans les denr\u00E9es alimentaires (mycotoxines, m\u00E9taux, dioxines, PCB, HAP,  m\u00E9lamine\u2026)\n- Est conforme au r\u00E8glement (CE) n\u00B0 396/2005 du 23 f\u00E9vrier 2005 modifi\u00E9  concernant les limites maximales applicables aux r\u00E9sidus de pesticides.\n\nPar le pr\u00E9sent document j\u2019atteste l\u2019exactitude de ces informations.
 
